@@ -3,14 +3,34 @@ Microsoft Developer Studio Workspace File, Format Version 6.00
 
 ###############################################################################
 
+Project: "modmux"=.\modmux\modmux.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+}}}
+
+###############################################################################
+
 Project: "netmux"=.\netmux.dsp - Package Owner=<4>
 
 Package=<5>
 {{{
-    begin source code control
-    "$/TinyMUX23/mux/src", PPGAAAAA
-    .
-    end source code control
+}}}
+
+Package=<4>
+{{{
+}}}
+
+###############################################################################
+
+Project: "sample"=.\modules\sample.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
 }}}
 
 Package=<4>
@@ -23,10 +43,6 @@ Global:
 
 Package=<5>
 {{{
-    begin source code control
-    "$/TinyMUX23/mux/src", PPGAAAAA
-    .
-    end source code control
 }}}
 
 Package=<3>
